--- a/Magazine011/appsettings.json
+++ b/Magazine011/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "DummyFilePath": {
+    "Path": "Data/ClassMembers.json"
+  }
 }
