--- a/Magazine011/appsettings.json
+++ b/Magazine011/appsettings.json
@@ -10,5 +10,9 @@
 
   "DummyFilePath": {
     "Path": "Data/ClassMembers.json"
+  },
+
+  "DBCon": {
+    "Path":  "Data Source=localhost;Initial Catalog=DummyTwo;Integrated Security=True" 
   }
 }
