--- a/Magazine011/Magazine011.csproj
+++ b/Magazine011/Magazine011.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\SQ011\Profile.cshtml" />
